Added an h2 title

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   </head>
   <body>
     <h1>Shining, shimmering, spleeeeeeeeendid</h1>
+    <h2>Tell me, princess, now when did you last let your heart decide?</h2>
   </body>
 </html>
